k8s/calibre-web.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre-web-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calibre-web
  template:
    metadata:
      labels:
        app: calibre-web
    spec:
      containers:
        - name: calibre-web
          image: linuxserver/calibre-web
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - containerPort: 8083
          volumeMounts:
          - mountPath: /config
            name: calibre-web-data
            subPath: config
          - mountPath: /books
            name: calibre-web-data
            subPath: books
          imagePullPolicy: IfNotPresent
      volumes:
      - name: calibre-web-data
        persistentVolumeClaim:
          claimName: calibre-web-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: calibre-web-service
spec:
  ports:
  - port: 80
    targetPort: 8083
    name: tcp
  selector:
    app: calibre-web
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: calibre-web-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  tls:
    - secretName: internal-acme-crt-secret
      hosts:
        - '*.internal.lazz.tech'
  rules:
  - host: read.internal.lazz.tech
    http:
      paths:
      - backend:
          serviceName: calibre-web-service
          servicePort: 80
